--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ _testmain.go
 # project specific excludes
 etc/*
 bin/*
-htdocs/*
+htdocs/person/*
+htdocs/affiliation/*
+htdocs/recent/*
 eprints*
 epgo
 *.zip
