--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,13 @@ _testmain.go
 # project specific excludes
 etc/*
 bin/*
+htdocs/index.*
+htdocs/publications.*
+htdocs/articles.*
+htdocs/data.*
+htdocs/recent/*
 htdocs/person/*
 htdocs/affiliation/*
-htdocs/recent/*
 eprints*
 epgo
 *.zip
