--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ _testmain.go
 etc/*
 bin/*
 htdocs/index.html
+htdocs/sitemap.xml
 htdocs/publications.*
 htdocs/articles.*
 htdocs/data.*
@@ -45,3 +46,5 @@ epgo
 testsite/*
 logs/*
 dist/*
+*.csv
+*.dat
