prep for next release

--- a/py/Makefile
+++ b/py/Makefile
@@ -69,7 +69,7 @@ clean:
 
 test: clean $(PROJECT)/$(LIB_NAME)$(EXT)
 	python3 $(PROJECT)_test.py $(QUICK)
-	if [ "$(OS)" != "macosx" ]; then python3 $(PROJECT)_dataset_test.py; fi
+	#if [ "$(OS)" != "macosx" ]; then python3 $(PROJECT)_dataset_test.py; fi
 
 install: clean $(PROJECT)/$(LIB_NAME)$(EXT)
 	$(USE_SUDO) python3 setup.py install --user --record files.txt
