--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: eprinttools # Caltech Library EPrint Tools
 base: core20 # the base snap is the execution environment for this snap
-version: '1.1.6' # Development semver
+version: '1.1.7-dev' # Development semver
 summary: Command line tools and service for working with an EPrints repository
 description: |
         eprinttools provides a epfmt, eputil and ep3apid. The first are
