updated snapscraft YAML

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,6 +23,7 @@ apps:
                 - home
   ep3apid:
         command: bin/ep3apid
+        daemon: simple
         plugs:
                 - home
 parts:
